# urbandata-gammaflow

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: README.md  arad_detection.ipynb  k_sigma_detection.ipynb  listmode_processing.ipynb  sad_detection.ipynb  train_arad.py
src/: __init__.py
src/detectors/: __init__.py  arad.py  k_sigma.py  sad.py
